获取音频解码器，读取音频帧

--- a/player/CMakeLists.txt
+++ b/player/CMakeLists.txt
@@ -19,6 +19,9 @@ add_library( # Sets the name of the library.
         # Provides a relative path to your source file(s).
         src/main/cpp/native-lib.cpp
         src/main/cpp/JavaListener.cpp
+        src/main/cpp/JavaInvoke.cpp
+        src/main/cpp/FFmpeg.cpp
+        src/main/cpp/Audio.cpp
         )
 add_library( avcodec-57 SHARED IMPORTED)
 set_target_properties( avcodec-57
