使用生产者和消费者模式，多线程模式下使用队列存取音频帧

--- a/player/CMakeLists.txt
+++ b/player/CMakeLists.txt
@@ -22,6 +22,8 @@ add_library( # Sets the name of the library.
         src/main/cpp/JavaInvoke.cpp
         src/main/cpp/FFmpeg.cpp
         src/main/cpp/Audio.cpp
+        src/main/cpp/PacketQueue.cpp
+        src/main/cpp/Status.cpp
         )
 add_library( avcodec-57 SHARED IMPORTED)
 set_target_properties( avcodec-57
