使用SL播放本地音乐 6.0需动态申请读写SDCard权限

--- a/player/CMakeLists.txt
+++ b/player/CMakeLists.txt
@@ -82,7 +82,7 @@ set_target_properties( swscale-4
 
 target_link_libraries( # Specifies the target library.
         native-lib
-
+        OpenSLES
         avcodec-57
         avdevice-57
         avfilter-6
